--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "^10.4.22",
     "cytoscape": "^3.33.1",
     "echarts": "^6.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
     "postcss": "^8.5.6",
     "rxjs": "~7.5.0",
