--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/leaflet.heat": "^0.2.5",
     "autoprefixer": "^10.4.22",
     "cytoscape": "^3.33.1",
     "echarts": "^6.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.5.0",
     "tailwindcss": "^4.1.17",
